--- a/RestAPI/RestAPI/slope one test.ipynb
+++ b/RestAPI/RestAPI/slope one test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "<QuerySet [<Gathering: binno together!>, <Gathering: Delicious!>, <Gathering: First gathering>, <Gathering: Tesing>, <Gathering: qfgggfffdfffff>, <Gathering: gsjsbjsjs>, <Gathering: gugjjjj>, <Gathering: uhjkkkkkj>]>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -105,8 +105,7 @@
       "15  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
       "16  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
       "17  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
-      "18  NaN  NaN    2  NaN    4    4  NaN\n",
-      "True\n"
+      "18  NaN  NaN    2  NaN    4    4  NaN\n"
      ]
     }
    ],
@@ -124,12 +123,12 @@
     "    rating.at[review.user_id,review.restaurant_id]=review.rating\n",
     "\n",
     "print(rating)\n",
-    "print(np.isnan(rating.loc[13,5]))"
+    "#print(np.isnan(rating.loc[13,5]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +160,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-53-08be8ea8ab36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfreq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;31m#print(diff.iloc[1])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-132-08be8ea8ab36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfreq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;31m#print(diff.iloc[1])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
@@ -195,17 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.6666666666666665\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predid=18\n",
     "restid=7\n",
@@ -227,96 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     5    6    7   10   11\n",
-       "11    5    3    2 NaN  NaN\n",
-       "12    3    4  NaN NaN  NaN\n",
-       "13  NaN    2    5 NaN  NaN\n",
-       "14  NaN  NaN  NaN NaN  NaN\n",
-       "15  NaN  NaN  NaN NaN  4.0"
-      ]
-     },
-     "execution_count": 196,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -328,70 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     5    6    7\n",
-       "5  NaN    3    2\n",
-       "6    3  NaN    2\n",
-       "7    2    2  NaN"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "newReviewRest=5\n",
@@ -402,20 +245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 6, 7]"
-      ]
-     },
-     "execution_count": 208,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "restaurantid\n",
     "matrixLenght=len(restaurantid)\n",
@@ -431,48 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'RecommendedRate' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-f9b80a68c58c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mRecommendedRate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobjects\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'RecommendedRate' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "RecommendedRate.objects.all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nan\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from API.recommendation import *\n",
     "s=SlopeOne()\n",
@@ -484,7 +286,116 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "\n",
+    "print(freq)\n",
+    "agg = AgglomerativeClustering(n_clusters=3, affinity='precomputed',linkage='average')\n",
+    "print(agg.fit_predict(freq.fillna(0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Hong Kong Island  Kowloon  New Territories\n",
+      "Hong Kong Island               0.0      8.1             16.2\n",
+      "Kowloon                        8.1      0.0             12.7\n",
+      "New Territories               16.2     12.7              0.0\n",
+      "      6     7     8     9     10    11    12    13    14    15    16    17  \\\n",
+      "6    0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
+      "7    0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
+      "8    0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
+      "9   12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
+      "10   0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
+      "11  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
+      "12   0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
+      "13  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
+      "14  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
+      "15  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
+      "16   0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
+      "17   0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
+      "18  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
+      "\n",
+      "      18  \n",
+      "6   12.7  \n",
+      "7   12.7  \n",
+      "8   12.7  \n",
+      "9    0.0  \n",
+      "10  12.7  \n",
+      "11   0.0  \n",
+      "12  12.7  \n",
+      "13   0.0  \n",
+      "14   0.0  \n",
+      "15   0.0  \n",
+      "16  12.7  \n",
+      "17  12.7  \n",
+      "18   0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "profileList=list(Profile.objects.all().order_by('user_id').values_list('user_id', flat=True))\n",
+    "\n",
+    "from django_pandas.io import read_frame\n",
+    "qs = Profile.objects.all()\n",
+    "profileTable = read_frame(qs,fieldnames=['user_id','dob', 'location', 'gender']).set_index('user_id')\n",
+    "#print(profileTable)\n",
+    "\n",
+    "locationDistanceMatrix=pd.DataFrame(index=profileList,columns=profileList)\n",
+    "#print(profileTable.iloc[1]['location'])\n",
+    "\n",
+    "region=['Hong Kong Island','Hong Kong Island','Hong Kong Island','Hong Kong Island',\n",
+    "        'Kowloon','Kowloon','Kowloon','Kowloon','Kowloon','Kowloon',\n",
+    "        'New Territories','New Territories','New Territories','New Territories','New Territories','New Territories',\n",
+    "       'New Territories','New Territories']\n",
+    "district=['Central and Western','Eastern','Southern','Wan Chai',\n",
+    "          'Sham Shui Po','Kowloon City','Kwun Tong','Wong Tai Sin','Yau Tsim Mong',\n",
+    "          'Islands','Kwai Tsing','North','Sai Kung','Sha Tin','Tai Po','Tsuen Wan','Tuen Mun','Yuen Long']\n",
+    "\n",
+    "regionNameList=['Hong Kong Island','Kowloon','New Territories']\n",
+    "districtRegionRelationship=pd.DataFrame(index=district)\n",
+    "districtRegionRelationship['region']=region\n",
+    "#print(districtRegionRelationship.loc['Yuen Long'].values[0])\n",
+    "\n",
+    "regionDistanceMatrix=pd.DataFrame(index=regionNameList,columns=regionNameList)\n",
+    "regionDistanceMatrix.iloc[0,1]=8.1\n",
+    "regionDistanceMatrix.iloc[1,0]=8.1\n",
+    "regionDistanceMatrix.iloc[0,2]=16.2\n",
+    "regionDistanceMatrix.iloc[2,0]=16.2\n",
+    "regionDistanceMatrix.iloc[1,2]=12.7\n",
+    "regionDistanceMatrix.iloc[2,1]=12.7\n",
+    "regionDistanceMatrix=regionDistanceMatrix.fillna(0)\n",
+    "print(regionDistanceMatrix)\n",
+    "\n",
+    "matrixLenght=len(profileList)\n",
+    "for i in range(0,matrixLenght-1):\n",
+    "    for j in range(i+1,matrixLenght):\n",
+    "        #print(\"i={0},j={1}\".format(i, j))\n",
+    "        myIndex=profileList[i]\n",
+    "        otherIndex=profileList[j]\n",
+    "        myLocation=profileTable.loc[myIndex]['location']\n",
+    "        otherLocation=profileTable.loc[otherIndex]['location']\n",
+    "        myRegion=districtRegionRelationship.loc[myLocation].values[0]\n",
+    "        #print(myRegion)\n",
+    "        otherRegion=districtRegionRelationship.loc[otherLocation].values[0]\n",
+    "        #print(regionDistanceMatrix.loc[myRegion][otherRegion])\n",
+    "        #print(regionDistanceMatrix.iloc[0][1])\n",
+    "        locationDistanceMatrix.loc[myIndex,otherIndex]=regionDistanceMatrix.loc[myRegion,otherRegion]\n",
+    "        locationDistanceMatrix.loc[otherIndex,myIndex]=regionDistanceMatrix.loc[myRegion,otherRegion]\n",
+    "\n",
+    "locationDistanceMatrix.fillna(0, inplace=True)\n",
+    "locationDistanceMatrix_norm = ((locationDistanceMatrix - locationDistanceMatrix.values.min()) / \n",
+    "                               (locationDistanceMatrix.values.max() - locationDistanceMatrix.values.min()))\n",
+    "print(locationDistanceMatrix)\n",
+    "#print(locationDistanceMatrix)\n",
+    "#print(df.iloc[:]['location'])\n"
+   ]
   },
   {
    "cell_type": "code",
