--- a/RestAPI/RestAPI/slope one test.ipynb
+++ b/RestAPI/RestAPI/slope one test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "<QuerySet [<Gathering: binno together!>, <Gathering: Delicious!>, <Gathering: First gathering>, <Gathering: Tesing>, <Gathering: qfgggfffdfffff>, <Gathering: gsjsbjsjs>, <Gathering: gugjjjj>, <Gathering: uhjkkkkkj>]>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-132-08be8ea8ab36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfreq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;31m#print(diff.iloc[1])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-14-08be8ea8ab36>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfreq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;31m#print(diff.iloc[1])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
@@ -283,72 +283,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.cluster import AgglomerativeClustering\n",
-    "\n",
-    "print(freq)\n",
     "agg = AgglomerativeClustering(n_clusters=3, affinity='precomputed',linkage='average')\n",
-    "print(agg.fit_predict(freq.fillna(0)))"
+    "#print(agg.fit_predict(locationDistanceMatrix_norm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                  Hong Kong Island  Kowloon  New Territories\n",
-      "Hong Kong Island               0.0      8.1             16.2\n",
-      "Kowloon                        8.1      0.0             12.7\n",
-      "New Territories               16.2     12.7              0.0\n",
-      "      6     7     8     9     10    11    12    13    14    15    16    17  \\\n",
-      "6    0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
-      "7    0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
-      "8    0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
-      "9   12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
-      "10   0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
-      "11  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
-      "12   0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
-      "13  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
-      "14  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
-      "15  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
-      "16   0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
-      "17   0.0   0.0   0.0  12.7   0.0  12.7   0.0  12.7  12.7  12.7   0.0   0.0   \n",
-      "18  12.7  12.7  12.7   0.0  12.7   0.0  12.7   0.0   0.0   0.0  12.7  12.7   \n",
-      "\n",
-      "      18  \n",
-      "6   12.7  \n",
-      "7   12.7  \n",
-      "8   12.7  \n",
-      "9    0.0  \n",
-      "10  12.7  \n",
-      "11   0.0  \n",
-      "12  12.7  \n",
-      "13   0.0  \n",
-      "14   0.0  \n",
-      "15   0.0  \n",
-      "16  12.7  \n",
-      "17  12.7  \n",
-      "18   0.0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#global variable\n",
+    "def normalize(x):\n",
+    "    return((x - x.values.min()) / (x.values.max() - x.values.min()))\n",
+    "\n",
     "profileList=list(Profile.objects.all().order_by('user_id').values_list('user_id', flat=True))\n",
+    "distanceMatrixLenght=len(profileList)\n",
+    "locationDistanceMatrix=pd.DataFrame(index=profileList,columns=profileList)\n",
     "\n",
     "from django_pandas.io import read_frame\n",
     "qs = Profile.objects.all()\n",
     "profileTable = read_frame(qs,fieldnames=['user_id','dob', 'location', 'gender']).set_index('user_id')\n",
-    "#print(profileTable)\n",
-    "\n",
-    "locationDistanceMatrix=pd.DataFrame(index=profileList,columns=profileList)\n",
-    "#print(profileTable.iloc[1]['location'])\n",
     "\n",
     "region=['Hong Kong Island','Hong Kong Island','Hong Kong Island','Hong Kong Island',\n",
     "        'Kowloon','Kowloon','Kowloon','Kowloon','Kowloon','Kowloon',\n",
@@ -357,12 +317,11 @@
     "district=['Central and Western','Eastern','Southern','Wan Chai',\n",
     "          'Sham Shui Po','Kowloon City','Kwun Tong','Wong Tai Sin','Yau Tsim Mong',\n",
     "          'Islands','Kwai Tsing','North','Sai Kung','Sha Tin','Tai Po','Tsuen Wan','Tuen Mun','Yuen Long']\n",
-    "\n",
-    "regionNameList=['Hong Kong Island','Kowloon','New Territories']\n",
     "districtRegionRelationship=pd.DataFrame(index=district)\n",
     "districtRegionRelationship['region']=region\n",
-    "#print(districtRegionRelationship.loc['Yuen Long'].values[0])\n",
     "\n",
+    "\n",
+    "regionNameList=['Hong Kong Island','Kowloon','New Territories']\n",
     "regionDistanceMatrix=pd.DataFrame(index=regionNameList,columns=regionNameList)\n",
     "regionDistanceMatrix.iloc[0,1]=8.1\n",
     "regionDistanceMatrix.iloc[1,0]=8.1\n",
@@ -371,30 +330,233 @@
     "regionDistanceMatrix.iloc[1,2]=12.7\n",
     "regionDistanceMatrix.iloc[2,1]=12.7\n",
     "regionDistanceMatrix=regionDistanceMatrix.fillna(0)\n",
-    "print(regionDistanceMatrix)\n",
     "\n",
-    "matrixLenght=len(profileList)\n",
-    "for i in range(0,matrixLenght-1):\n",
-    "    for j in range(i+1,matrixLenght):\n",
-    "        #print(\"i={0},j={1}\".format(i, j))\n",
+    "\n",
+    "for i in range(0,distanceMatrixLenght-1):\n",
+    "    for j in range(i+1,distanceMatrixLenght):\n",
     "        myIndex=profileList[i]\n",
     "        otherIndex=profileList[j]\n",
     "        myLocation=profileTable.loc[myIndex]['location']\n",
     "        otherLocation=profileTable.loc[otherIndex]['location']\n",
     "        myRegion=districtRegionRelationship.loc[myLocation].values[0]\n",
-    "        #print(myRegion)\n",
     "        otherRegion=districtRegionRelationship.loc[otherLocation].values[0]\n",
-    "        #print(regionDistanceMatrix.loc[myRegion][otherRegion])\n",
-    "        #print(regionDistanceMatrix.iloc[0][1])\n",
     "        locationDistanceMatrix.loc[myIndex,otherIndex]=regionDistanceMatrix.loc[myRegion,otherRegion]\n",
     "        locationDistanceMatrix.loc[otherIndex,myIndex]=regionDistanceMatrix.loc[myRegion,otherRegion]\n",
     "\n",
     "locationDistanceMatrix.fillna(0, inplace=True)\n",
-    "locationDistanceMatrix_norm = ((locationDistanceMatrix - locationDistanceMatrix.values.min()) / \n",
-    "                               (locationDistanceMatrix.values.max() - locationDistanceMatrix.values.min()))\n",
-    "print(locationDistanceMatrix)\n",
-    "#print(locationDistanceMatrix)\n",
-    "#print(df.iloc[:]['location'])\n"
+    "locationDistanceMatrix_norm = normalize(locationDistanceMatrix)\n",
+    "#print(locationDistanceMatrix_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     1    2    3    4    5    6    7    8    9    10   11   12   13   14   15  \\\n",
+      "1   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "2   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "3   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "4   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "5   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "6   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "7   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "8   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "9   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "10  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "11  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "12  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "13  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "14  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "15  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.0   \n",
+      "16  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  0.5  1.0   \n",
+      "17  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "18  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.5   \n",
+      "\n",
+      "     16   17   18  \n",
+      "1   0.5  0.0  0.0  \n",
+      "2   0.5  0.0  0.0  \n",
+      "3   0.5  0.0  0.0  \n",
+      "4   0.5  0.0  0.0  \n",
+      "5   0.5  0.0  0.0  \n",
+      "6   0.5  0.0  0.0  \n",
+      "7   0.5  0.0  0.0  \n",
+      "8   0.5  0.0  0.0  \n",
+      "9   0.5  0.0  0.0  \n",
+      "10  0.5  0.0  0.0  \n",
+      "11  0.5  0.0  0.0  \n",
+      "12  0.5  0.0  0.0  \n",
+      "13  0.5  0.0  0.0  \n",
+      "14  0.5  0.0  0.0  \n",
+      "15  1.0  0.5  0.5  \n",
+      "16  0.0  0.5  0.5  \n",
+      "17  0.5  0.0  0.0  \n",
+      "18  0.5  0.0  0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "interestList=list(Interest.objects.all().order_by('id').values_list('id', flat=True))\n",
+    "interestDistanceMatrix=pd.DataFrame(index=profileList,columns=profileList)\n",
+    "\n",
+    "userInterestMatrix=pd.DataFrame(index=profileList,columns=interestList)\n",
+    "\n",
+    "for user in User.objects.all():\n",
+    "    for interest in user.enjoy.all():\n",
+    "        userInterestMatrix.loc[user.id][interest.id]=1\n",
+    "        \n",
+    "userInterestMatrix.fillna(0,inplace=True)\n",
+    "\n",
+    "#calculate interest distance\n",
+    "for i in range(0,distanceMatrixLenght-1):\n",
+    "    for j in range(i+1,distanceMatrixLenght):\n",
+    "        myIndex=profileList[i]\n",
+    "        otherIndex=profileList[j]\n",
+    "        temp=userInterestMatrix.loc[myIndex]-userInterestMatrix.loc[otherIndex]\n",
+    "        interestDistanceMatrix.loc[myIndex][otherIndex]=temp.abs().sum()\n",
+    "        interestDistanceMatrix.loc[otherIndex][myIndex]=temp.abs().sum()\n",
+    "interestDistanceMatrix.fillna(0,inplace=True)\n",
+    "interestDistanceMatrix_norm=normalize(interestDistanceMatrix)\n",
+    "#print(interestDistanceMatrix_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          1         2         3         4         5         6         7   \\\n",
+      "1   0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.080028   \n",
+      "2   0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.080028   \n",
+      "3   0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.080028   \n",
+      "4   0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.080028   \n",
+      "5   0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.080028   \n",
+      "6   0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.080028   \n",
+      "7   0.080028  0.080028  0.080028  0.080028  0.080028  0.080028  0.000000   \n",
+      "8   0.015683  0.015683  0.015683  0.015683  0.015683  0.015683  0.095710   \n",
+      "9   0.588792  0.588792  0.588792  0.588792  0.588792  0.588792  0.668819   \n",
+      "10  0.258533  0.258533  0.258533  0.258533  0.258533  0.258533  0.338561   \n",
+      "11  0.526061  0.526061  0.526061  0.526061  0.526061  0.526061  0.606089   \n",
+      "12  0.321956  0.321956  0.321956  0.321956  0.321956  0.321956  0.401983   \n",
+      "13  0.003229  0.003229  0.003229  0.003229  0.003229  0.003229  0.076799   \n",
+      "14  0.189806  0.189806  0.189806  0.189806  0.189806  0.189806  0.109779   \n",
+      "15  0.810194  0.810194  0.810194  0.810194  0.810194  0.810194  0.890221   \n",
+      "16  0.091559  0.091559  0.091559  0.091559  0.091559  0.091559  0.011531   \n",
+      "17  0.425277  0.425277  0.425277  0.425277  0.425277  0.425277  0.505304   \n",
+      "18  0.246541  0.246541  0.246541  0.246541  0.246541  0.246541  0.326568   \n",
+      "\n",
+      "          8         9         10        11        12        13        14  \\\n",
+      "1   0.015683  0.588792  0.258533  0.526061  0.321956  0.003229  0.189806   \n",
+      "2   0.015683  0.588792  0.258533  0.526061  0.321956  0.003229  0.189806   \n",
+      "3   0.015683  0.588792  0.258533  0.526061  0.321956  0.003229  0.189806   \n",
+      "4   0.015683  0.588792  0.258533  0.526061  0.321956  0.003229  0.189806   \n",
+      "5   0.015683  0.588792  0.258533  0.526061  0.321956  0.003229  0.189806   \n",
+      "6   0.015683  0.588792  0.258533  0.526061  0.321956  0.003229  0.189806   \n",
+      "7   0.095710  0.668819  0.338561  0.606089  0.401983  0.076799  0.109779   \n",
+      "8   0.000000  0.573109  0.242851  0.510378  0.306273  0.018911  0.205489   \n",
+      "9   0.573109  0.000000  0.330258  0.062731  0.266836  0.592020  0.778598   \n",
+      "10  0.242851  0.330258  0.000000  0.267528  0.063423  0.261762  0.448339   \n",
+      "11  0.510378  0.062731  0.267528  0.000000  0.204105  0.529290  0.715867   \n",
+      "12  0.306273  0.266836  0.063423  0.204105  0.000000  0.325185  0.511762   \n",
+      "13  0.018911  0.592020  0.261762  0.529290  0.325185  0.000000  0.186577   \n",
+      "14  0.205489  0.778598  0.448339  0.715867  0.511762  0.186577  0.000000   \n",
+      "15  0.794511  0.221402  0.551661  0.284133  0.488238  0.813423  1.000000   \n",
+      "16  0.107242  0.680351  0.350092  0.617620  0.413515  0.088330  0.098247   \n",
+      "17  0.409594  0.163515  0.166744  0.100784  0.103321  0.428506  0.615083   \n",
+      "18  0.230858  0.342251  0.011993  0.279520  0.075415  0.249769  0.436347   \n",
+      "\n",
+      "          15        16        17        18  \n",
+      "1   0.810194  0.091559  0.425277  0.246541  \n",
+      "2   0.810194  0.091559  0.425277  0.246541  \n",
+      "3   0.810194  0.091559  0.425277  0.246541  \n",
+      "4   0.810194  0.091559  0.425277  0.246541  \n",
+      "5   0.810194  0.091559  0.425277  0.246541  \n",
+      "6   0.810194  0.091559  0.425277  0.246541  \n",
+      "7   0.890221  0.011531  0.505304  0.326568  \n",
+      "8   0.794511  0.107242  0.409594  0.230858  \n",
+      "9   0.221402  0.680351  0.163515  0.342251  \n",
+      "10  0.551661  0.350092  0.166744  0.011993  \n",
+      "11  0.284133  0.617620  0.100784  0.279520  \n",
+      "12  0.488238  0.413515  0.103321  0.075415  \n",
+      "13  0.813423  0.088330  0.428506  0.249769  \n",
+      "14  1.000000  0.098247  0.615083  0.436347  \n",
+      "15  0.000000  0.901753  0.384917  0.563653  \n",
+      "16  0.901753  0.000000  0.516836  0.338100  \n",
+      "17  0.384917  0.516836  0.000000  0.178736  \n",
+      "18  0.563653  0.338100  0.178736  0.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "profileTable['dob']= pd.to_datetime(profileTable['dob'])\n",
+    "ageDistanceMatrix=pd.DataFrame(index=profileList,columns=profileList)\n",
+    "for i in range(0,distanceMatrixLenght-1):\n",
+    "    for j in range(i+1,distanceMatrixLenght):\n",
+    "        myIndex=profileList[i]\n",
+    "        otherIndex=profileList[j]\n",
+    "        yearDiff=abs((profileTable['dob'][myIndex]-profileTable['dob'][otherIndex]).days)/365\n",
+    "        ageDistanceMatrix.loc[myIndex][otherIndex]=yearDiff\n",
+    "        ageDistanceMatrix.loc[otherIndex][myIndex]=yearDiff\n",
+    "ageDistanceMatrix.fillna(0,inplace=True)\n",
+    "ageDistanceMatrix_norm=normalize(ageDistanceMatrix)\n",
+    "#print(ageDistanceMatrix_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 1 1 1 0 1 0 1 0 1 0 0 2 1 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test=interestDistanceMatrix_norm+locationDistanceMatrix_norm+ageDistanceMatrix_norm/3\n",
+    "label=agg.fit_predict(test)\n",
+    "print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 2 2 2 2 0 2 0 2 0 2 0 0 1 2 2 0]\n",
+      "2\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "from API.recommendation import *\n",
+    "u=UserClustering()\n",
+    "u.clustering()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile=Profile.objects.filter(user_id=1).update(cluster=1)"
    ]
   },
   {
