--- a/RestAPI/RestAPI/slope one test.ipynb
+++ b/RestAPI/RestAPI/slope one test.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
       "13  NaN  NaN  NaN  NaN  NaN    2    5\n",
       "14  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
       "15  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
-      "16  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
+      "16  NaN  NaN  NaN  NaN    3    4  NaN\n",
       "17  NaN  NaN  NaN  NaN  NaN  NaN  NaN\n",
       "18  NaN  NaN    2  NaN    4    4  NaN\n"
      ]
@@ -531,19 +531,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 2 2 2 2 2 0 2 0 2 0 2 0 0 1 2 2 0]\n",
-      "2\n",
-      "18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from API.recommendation import *\n",
     "u=UserClustering()\n",
@@ -552,11 +542,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "RecommendedRate object\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "profile=Profile.objects.filter(user_id=1).update(cluster=1)"
+    "requestUser=User.objects.get(id=18)\n",
+    "mgathering=Gathering.objects.get(id=22)\n",
+    "#print(mgathering.member.all())\n",
+    "#print(mgathering.user)\n",
+    "\n",
+    "\n",
+    "returnRate=lambda myProfile,otherProfile: 1 if myProfile.cluster==otherProfile.cluster else -1\n",
+    "\n",
+    "clusterRate=0\n",
+    "for member in mgathering.member.exclude(id=requestUser.id):\n",
+    "    clusterRate+=returnRate(requestUser.profile,member.profile)\n",
+    "\n",
+    "clusterRate+=returnRate(requestUser.profile,mgathering.user.profile)\n",
+    "clusterRate=clusterRate/(len(mgathering.member.exclude(id=requestUser.id))+1)\n",
+    "print(clusterRate)\n",
+    "#print((len(mgathering.member.exclude(id=requestUser.id)))+1)\n",
+    "obj, created = RecommendedRate.objects.update_or_create(\n",
+    "    gathering=mgathering, user=requestUser,\n",
+    "    restaurant=mgathering.restaurant,\n",
+    "    defaults={'cluster_rate': clusterRate}\n",
+    ")\n",
+    "print(obj)\n",
+    "print(created)"
    ]
   },
   {
