background task for running clustering

--- a/RestAPI/RestAPI/slope one test.ipynb
+++ b/RestAPI/RestAPI/slope one test.ipynb
@@ -583,6 +583,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task: __main__.autoClustering>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from background_task import background\n",
+    "from API.recommendation import *\n",
+    "import datetime\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "@background(schedule=60)\n",
+    "def autoClustering():\n",
+    "    u=UserClustering()\n",
+    "    u.clustering()\n",
+    "    \n",
+    "autoClustering(repeat=2,repeat_until=None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-03-13 15:25:52.626140\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "now = datetime.datetime.now()\n",
+    "print(now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-03-13 15:25:57.546113\n"
+     ]
+    }
+   ],
+   "source": [
+    "from django.utils import timezone\n",
+    "now = timezone.now()\n",
+    "print(now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-03-13 15:24:49.824599\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "print(now)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
