distance rate background task

--- a/RestAPI/RestAPI/slope one test.ipynb
+++ b/RestAPI/RestAPI/slope one test.ipynb
@@ -670,6 +670,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import googlemaps\n",
+    "gmaps = googlemaps.Client(key='AIzaSyBUcE5kC4G6NL0hb8VjqFOAsZLGaQoWO7Q')\n",
+    "p=Profile.objects.get(user_id=16)\n",
+    "origins = (p.latitude, p.longitude)\n",
+    "for gathering in Gathering.objects.all():\n",
+    "    distance = gmaps.distance_matrix(origins,gathering.restaurant.address)\n",
+    "    distance_rate=distance.get('rows')[0].get('elements')[0].get('duration').get('value')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.4502779 114.0234592\n",
+      "Long Ping Estate, Long Ping Commercial Complex, 3/F, 301, Yuen Long, Hong Kong\n"
+     ]
+    }
+   ],
+   "source": [
+    "from geopy.geocoders import GoogleV3\n",
+    "\n",
+    "address='301, 3/F, Long Ping Commercial Complex, Yuen Long'\n",
+    "geolocator = GoogleV3(api_key=\"AIzaSyBUcE5kC4G6NL0hb8VjqFOAsZLGaQoWO7Q\")\n",
+    "location = geolocator.geocode(address)\n",
+    "print(location.latitude, location.longitude) \n",
+    "print(location.address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "p15=Profile.objects.get(user_id=15)\n",
+    "if(p15.latitude==None):\n",
+    "    print('yes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 19 223\n",
+      "16 20 223\n",
+      "16 21 223\n",
+      "16 22 319\n",
+      "16 25 223\n",
+      "16 26 319\n",
+      "16 27 319\n",
+      "16 28 223\n",
+      "16 29 223\n",
+      "17 19 419\n",
+      "17 20 419\n",
+      "17 21 419\n",
+      "17 22 594\n",
+      "17 25 419\n",
+      "17 26 594\n",
+      "17 27 594\n",
+      "17 28 419\n",
+      "17 29 419\n"
+     ]
+    }
+   ],
+   "source": [
+    "gmaps = googlemaps.Client(key='AIzaSyBUcE5kC4G6NL0hb8VjqFOAsZLGaQoWO7Q')  \n",
+    "for requestUser in User.objects.all():\n",
+    "    if (requestUser.profile.latitude!=None):\n",
+    "        for gathering in Gathering.objects.all():\n",
+    "            origins = (requestUser.profile.latitude, requestUser.profile.longitude)\n",
+    "            distance = gmaps.distance_matrix(origins,gathering.restaurant.address)\n",
+    "            result=distance.get('rows')[0].get('elements')[0].get('duration')\n",
+    "            if (result!=None):\n",
+    "                distance_rate=result.get('value')\n",
+    "                print(requestUser.id,gathering.id,distance_rate)\n",
+    "                obj, created = RecommendedRate.objects.update_or_create(\n",
+    "                    gathering=gathering, user=requestUser,\n",
+    "                    defaults={'distance_rate': distance_rate}\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
