scapper for restaurants

--- a/RestAPI/RestAPI/Untitled.ipynb
+++ b/RestAPI/RestAPI/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "#from exceptions import ValueError\n",
     "from time import sleep\n",
     "import re\n",
-    "import argparse"
+    "import argparse\n",
+    "import shutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Element html at 0x14285e96db8>\n"
+      "<Element html at 0x1fab3764bd8>\n"
      ]
     }
    ],
@@ -48,26 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mrs Tang Cafe']\n",
-      "['發記腸粉粥品']\n",
-      "['Tokyo Tsukiji']\n",
-      "['Tai Wing Wah Restaurant']\n",
-      "['New York Cafe & Bar']\n",
-      "['Hakka Hut']\n",
-      "['Kurosawa Kitchen']\n",
-      "['Hung Fook Tong']\n",
-      "['Siu Tao Yuen']\n",
-      "['Hai Nam Chicken Takeaway Shop']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "listing = parser.xpath(\"//li[@class='regular-search-result']\")\n",
     "total_results = parser.xpath(\"//span[@class='pagination-results-window']//text()\")\n",
@@ -75,7 +59,13 @@
     "for results in listing:\n",
     "    raw_position = results.xpath(\".//span[@class='indexed-biz-name']/text()\")\t\n",
     "    raw_name = results.xpath(\".//span[@class='indexed-biz-name']/a//text()\")\n",
-    "    print(raw_name)"
+    "    img_url = results.xpath(\".//div[@class='photo-box pb-90s']//img/@src\")[0].replace('90s','o')\n",
+    "    phone = results.xpath(\".//span[@class='biz-phone']/text()\")[0].strip()\n",
+    "    img_r = requests.get(img_url, stream=True)\n",
+    "    if img_r.status_code == 200:\n",
+    "        with open('F:/Python-API-test/RestAPI/RestAPI/scrapper_script/img/%s.jpg'%(1), 'wb') as f:\n",
+    "            img_r.raw.decode_content = True\n",
+    "            shutil.copyfileobj(img_r.raw, f)     "
    ]
   },
   {
@@ -102,6 +92,15 @@
    ],
    "source": [
     "print(codecs.BOM_UTF8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil"
    ]
   },
   {
