--- a/RestAPI/RestAPI/slope one test.ipynb
+++ b/RestAPI/RestAPI/slope one test.ipynb
@@ -685,22 +685,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22.4420818 114.0311658\n",
-      "Kin Yip St, Yuen Long, Hong Kong\n"
+      "22.4429299 114.0235494\n",
+      "101-121 Kau Yuk Rd, Yuen Long, Hong Kong\n"
      ]
     }
    ],
    "source": [
     "from geopy.geocoders import GoogleV3\n",
     "\n",
-    "address='67 Kin Yip Street 建業街67號 Hong Kong'\n",
+    "address='119 Kau Yuk Road 元朗教育路119號 Hong Kong'\n",
     "geolocator = GoogleV3(api_key=\"AIzaSyBUcE5kC4G6NL0hb8VjqFOAsZLGaQoWO7Q\")\n",
     "location = geolocator.geocode(address)\n",
     "print(location.latitude, location.longitude) \n",
